2016-12-15  Boyuan Yang <073plan@gmail.com>

	* Rewrite README into README.md.
	* make [.1 an alias of test.1.
	* fifo(4) -> fifo(7), complete translation.

2016-12-14  Boyuan Yang <073plan@gmail.com>

	* remove all conflicting man pages.
	* remove some non-existant command pages.
	* some minor modifications.
	* release 1.5.4.1.

2011-07-09  LI Daobing <lidaobing@gmail.com>

	* remove git.1.
	* release 1.5.2.


The old changelog for CMPP is in DOCS/ChangeLog.

Thanks.

# vim:ft=changelog: