@@ -25,6 +25,16 @@
 
 ## 安装与使用
 
+### 构建
+
+构建依赖包括：
+
+* autotools (autoconf, automake)
+* perl
+* python3
+* zh-autoconvert
+* iconv
+
 ### 从 Linux 发行版安装
 
 Debian:
