@@ -2,14 +2,20 @@ include $(srcdir)/../manpages
 
 mandir = @mandir@/zh_CN
 
+if APPEND_COLOPHON
+APPEND_COLOPHON = ${top_srcdir}/utils/append-colophon
+else !APPEND_COLOPHON
+APPEND_COLOPHON = tee
+endif
+
 man_MANS = $(MANPAGES)
 
 if UTF8
 %.1: $(srcdir)/../%.1
-	cp $< $@
+	$(APPEND_COLOPHON) < $< > $@
 else !UTF8
 %.1: $(srcdir)/../%.1
-	iconv -f utf8 -t gbk -o $@ $<
+	$(APPEND_COLOPHON) < $< | iconv -f utf8 -t gbk -o $@
 endif !UTF8
 
 clean-local:
