@@ -2,19 +2,24 @@ include $(srcdir)/../manpages
 
 mandir = @mandir@/zh_CN
 
+if APPEND_COLOPHON
+APPEND_COLOPHON = ${top_srcdir}/utils/append-colophon
+else !APPEND_COLOPHON
+APPEND_COLOPHON = tee
+endif
+
 man_MANS = $(MANPAGES)
 
 if UTF8
 %tcl: $(srcdir)/../%tcl
-	cp $< $@
+	$(APPEND_COLOPHON) < $< > $@
 %tk: $(srcdir)/../%tk
-	cp $< $@
+	$(APPEND_COLOPHON) < $< > $@
 else !UTF8
 %tcl: $(srcdir)/../%tcl
-	iconv -f utf8 -t gbk -o $@ $<
-
+	$(APPEND_COLOPHON) < $< | iconv -f utf8 -t gbk -o $@
 %tk: $(srcdir)/../%tk
-	iconv -f utf8 -t gbk -o $@ $<
+	$(APPEND_COLOPHON) < $< | iconv -f utf8 -t gbk -o $@
 endif
 
 clean-local:
