@@ -1,3 +1,8 @@
+2016-12-18  Boyuan Yang <073plan@gmail.com>
+
+	* Full translation of fs(5).
+	* Append colophon on building by default.
+
 2016-12-15  Boyuan Yang <073plan@gmail.com>
 
 	* Rewrite README into README.md.
